# ImageProcessor

backend/: package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/images/: images.controller.ts  images.service.ts
backend/src/images/dto/: create-image.dto.ts
backend/src/images/interfaces/: image.interface.ts
engine/: CMakeLists.txt
engine/include/: Image.h
engine/src/: Image.cpp  main.cpp
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: components.css
frontend/src/components/custom/: FolderUpload.tsx  Navigation.tsx
frontend/src/components/ui/: input.tsx
frontend/src/pages/: Home.tsx
